--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
         * { margin: 0; padding: 0; box-sizing: border-box; }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            min-height: 100vh;
-            background: radial-gradient(circle at top, #1d4ed8 0%, #020617 45%, #000 100%);
-            color: #e5e7eb;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background:
+        linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+        url("bg.png") no-repeat center center / cover;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 20px;
+        color: #e5e7eb;
+}
+
 
         .landing-wrapper {
             max-width: 1100px;
