--- a/register.html
+++ b/register.html
@@ -9,7 +9,9 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: radial-gradient(circle at top, #1d4ed8 0%, #020617 45%, #000 100%);
+            background: 
+            linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+            url("bg.png") no-repeat center center / cover;
             min-height: 100vh;
             display: flex;
             align-items: center;
@@ -21,7 +23,9 @@
         .registration-container {
             max-width: 500px;
             width: 100%;
-            background: rgba(15,23,42,0.98);
+            background: rgba(15, 23, 42, 0.55); /* translucent */
+    backdrop-filter: blur(1px);        /* glass effect */
+    -webkit-backdrop-filter: blur(1px);
             padding: 40px 32px;
             border-radius: 24px;
             box-shadow: 0 24px 70px rgba(0,0,0,0.9);
