--- a/thankyou.html
+++ b/thankyou.html
@@ -9,7 +9,9 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: radial-gradient(circle at top, #1d4ed8 0%, #020617 45%, #000 100%);
+            background: 
+        linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)),
+        url("image.png") no-repeat center center / cover;
             min-height: 100vh;
             display: flex;
             align-items: center;
